       required. (Stefan)
- BUG: Issue #97: Too many accesses to the
       config files. (Stefan)
- BUG: Issue #98: Endless loop in
       repobrowser. (Stefan)
- BUG: Issue #100: wrong argument exception
       in repobrowser. (Stefan)
- BUG: Issue #99: Memory corruption in
       repository browser. (Stefan)
- BUG: Issue #102: renamed diff scripts. (Stefan)

Version 1.7.0
Too many changes to list here. See the release notes for
an overview of the most visible and important changes:
http://tortoisesvn.net/tsvn_1.7_releasenotes.html

Version 1.6.17
- BUG: the bugtraq:number property was added to
       new folders automatically even if not
       needed. (Stefan)

Version 1.6.16
- BUG: The bugtraq:number property was not added
       automatically to new folders. (Stefan)
- CHG: the in-memory auth cache is now encrypted. (Stefan)

Version 1.6.15
- BUG: Fixed problem with an invalid handle which caused
       file-open/save dialogs to throw an exception. (Stefan)

Version 1.6.14
- BUG: wrong manifest which lead to SxS errors on some systems after
       a Windows update. (Stefan)
- BUG: handle leak in the shell extension. (Stefan)

Version 1.6.13
- CHG: Updated dependencies (apr, openssl, zlib, ...)
- CHG: Increase the load retries in TBlame.

Version 1.6.12
- BUG: hook scripts could fail due to an invalid CWD parameter
       passed to the CreateProcess API. (Stefan)

Version 1.6.11
- BUG: Using spelling dictionaries in utf8 could crash
       the commit dialog. (Stefan)
- BUG: Dialogs could hang if they were closed if the
       modeless log dialog was still open. (Stefan)
- BUG: When checking an added file in the commit dialog,
       the parent folder wasn't checked automatically if
       it was added too. (Stefan)
- BUG: when passing /tourl: to the merge command, the
       revision range page was shown instead of
       the tree page. (Stefan)

Version 1.6.10
- BUG: Updating single items from the check-for-modifications