@@ -2548,7 +2548,10 @@ bool CSVNProgressDlg::CmdCopy(CString& sWindowTitle, bool& /*localoperation*/)
         {
             sCmdInfo.LoadString(IDS_PROGRS_CMD_TAGEXTERNALS);
             ReportCmd(sCmdInfo);
-            m_externals.TagExternals(true, CString(MAKEINTRESOURCE(IDS_COPY_COMMITMSG)), GetCommitRevision(), m_targetPathList[0], CTSVNPath(m_url));
+            if (!m_externals.TagExternals(true, CString(MAKEINTRESOURCE(IDS_COPY_COMMITMSG)), GetCommitRevision(), m_targetPathList[0], CTSVNPath(m_url)))
+            {
+                ReportError(m_externals.GetLastErrorString());
+            }
         }
     }
 
