@@ -24,6 +24,8 @@ Version 1.7.1
 - BUG: Issue #99: Memory corruption in
        repository browser. (Stefan)
 - BUG: Issue #102: renamed diff scripts. (Stefan)
+- BUG: Issue #102: tagging externals errors
+       not shown. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
